@@ -111,3 +111,4 @@ Added 'Search For Definition' entry to toolbar - same as 'Navigation->Search For
 0.0.16
 Added Recent File menu.
 Added multiple select fiile open.
+Added 'Show in Pop Up' option to external tools GUI.
